Adding Laravel Debuggbar support to the app

--- a/.env
+++ b/.env
@@ -4,11 +4,18 @@ APP_KEY=base64:xDjCYirYsisuxm7+vdnV2/fHdtcxqDdWKxF+DPPSh4k=
 APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
+
 DB_HOST=ec2-176-34-127-73.eu-west-1.compute.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=dc6a7pusuamdf2
 DB_USERNAME=fnpuxlxygwfxwu
 DB_PASSWORD=-k412GaiS6uGdmCRWW6QVixZwb
+
+MY_DB_HOST=127.0.0.1
+MY_DB_PORT=3306
+MY_DB_DATABASE=crescendobomdebola
+MY_DB_USERNAME=root
+MY_DB_PASSWORD=19122010
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
