Adding resource to see last active users in crescendo bom de bola system

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ MY_DB_USERNAME=root
 MY_DB_PASSWORD=19122010
 
 CACHE_DRIVER=file
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
