--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=base64:xDjCYirYsisuxm7+vdnV2/fHdtcxqDdWKxF+DPPSh4k=
 APP_URL=http://localhost
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 
 DB_HOST=ec2-176-34-127-73.eu-west-1.compute.amazonaws.com
 DB_PORT=5432
