--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "league/fractal": "^0.13.0",
         "robclancy/presenter": "^1.3",
         "barryvdh/laravel-debugbar": "^2.2", 
-	"kim/activity": "^1.1"
+	"kim/activity": "^1.1",
+        "zircote/swagger-php": "^2.0",
+        "cossou/jasperphp": "^2.1"
 
     },
     "require-dev": {
